--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             
             /* Hintergrundbild Einstellungen */
-            background-image: url('./Placeholder.bg.png');
+            background-image: url('Images/Placeholder.bg.png');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
