--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Meine Website mit Hintergrundbild</title>
     
     <!-- Favicon und App Icons -->
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="android-chrome-icon" sizes="192x192" href="android-chrome-192x192.png">
-    <link rel="android-chrome-icon" sizes="512x512" href="android-chrome-512x512.png">
+    <link rel="icon" type="image/x-icon" href="images/favicons/Favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/Fav32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicons/Fav16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicons/FavAppleTouch.png">
+    <link rel="android-chrome-icon" sizes="192x192" href="images/favicons/Fav192.png">
+    <link rel="android-chrome-icon" sizes="512x512" href="images/favicons/Fav512.png">
     
     <!-- Web App Manifest -->
     <link rel="manifest" href="manifest.json">
