--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meine Website mit Hintergrundbild</title>
+    <title>BeyondTheCover</title>
     
     <!-- Favicon und App Icons -->
     <link rel="icon" type="image/x-icon" href="images/favicons/Favicon.ico">
