--- a/index.html
+++ b/index.html
@@ -715,7 +715,11 @@
 <body>
     <header>
         <nav class="container">
-            <div class="logo">MINIMAL</div>
+            <div class="logo-area">
+                <a href="#"><img src="images/SubMarkLogo.png" alt="Logo"></a>
+                <a href="#" class="logo">MINIMAL STORE</a>
+            </div>
+
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#products">Products</a></li>
