--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
             padding: 1rem 0;
         }
 
+        .logo-area img {
+            height: 1em; /* Passt sich der Schriftgröße an */
+            width: auto; /* Bleibt im richtigen Seitenverhältnis */
+            display: inline-block;
+            vertical-align: middle;
+        }
+
+
         .logo {
             font-size: 1.5rem;
             font-weight: 700;
