--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MINIMAL STORE</title>
+    <title>BTC</title>
     <style>
         * {
             margin: 0;
@@ -725,7 +725,7 @@
         <nav class="container">
             <div class="logo-area">
                 <a href="#"><img src="images/SubMarkLogo.png" alt="Logo"></a>
-                <a href="#" class="logo">MINIMAL STORE</a>
+                <a href="#" class="logo">BeyondTheCover</a>
             </div>
 
             <ul class="nav-links">
@@ -744,7 +744,7 @@
     <main>
         <section class="hero" id="home">
             <div class="container">
-                <h1>MINIMAL STORE</h1>
+                <h1>BTC</h1>
                 <p>Entdecke unsere kuratierte Auswahl an Premium-Produkten</p>
             </div>
         </section>
