--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
         }
 
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
             background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 100%);
             color: #ffffff;
             min-height: 100vh;
             line-height: 1.6;
         }
 
+        h1 {
+            font-family: Arial, sans-serif;
+        }
+        
         .container {
             max-width: 1200px;
             margin: 0 auto;
