--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
         h1 {
             font-family: Arial, sans-serif;
+            text-decoration: none;
+            color: inherit;
         }
         
         .container {
