--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BTC</title>
     <style>
+        @font-face {
+           font-family: 'MainFont';
+           src: url('fonts/Bezmiar-Regular.otf') format('truetype');
+           font-weight: 400;
+        }
+
+        @font-face {
+           font-family: 'HeadlineFont';
+           src: url('fonts/Mavoble.ttf') format('truetype');
+           font-weight: 700;
+        }
+
+        @font-face {
+           font-family: 'HeadlineBoldFont';
+           src: url('fonts/MavobleBold.ttf') format('truetype');
+           font-weight: 700;
+        }
+        
         * {
             margin: 0;
             padding: 0;
@@ -19,7 +37,7 @@
         }
 
         h1 {
-            font-family: Arial, sans-serif;
+            font-family: HeadlineFont;
             text-decoration: none;
             color: inherit;
         }
