--- a/index.html
+++ b/index.html
@@ -7,19 +7,13 @@
     <style>
         @font-face {
            font-family: 'MainFont';
-           src: url('fonts/Bezmiar-Regular.otf') format('truetype');
+           src: url('fonts/Bezmiar-Regular.otf') format('opentype');
            font-weight: 400;
         }
 
         @font-face {
            font-family: 'HeadlineFont';
            src: url('fonts/Mavoble.ttf') format('truetype');
-           font-weight: 700;
-        }
-
-        @font-face {
-           font-family: 'HeadlineBoldFont';
-           src: url('fonts/MavobleBold.ttf') format('truetype');
            font-weight: 700;
         }
         
