--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
         h1 {
             font-family: HeadlineFont;
+            font-weight: 700;
             text-decoration: none;
             color: inherit;
         }
