--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <title>BTC</title>
     <style>
         @font-face {
-           font-family: 'MainFont';
+           font-family: 'HeadlineFont';
            src: url('fonts/Bezmiar-Regular.otf') format('opentype');
-           font-weight: 400;
+           font-weight: 700;
         }
 
         @font-face {
-           font-family: 'HeadlineFont';
+           font-family: 'MainFont';
            src: url('fonts/Mavoble.ttf') format('truetype');
-           font-weight: 700;
+           font-weight: 400;
         }
         
         * {
@@ -72,7 +72,8 @@
             font-size: 1.5rem;
             font-weight: 700;
             letter-spacing: 2px;
-            color: #fff;
+            text-decoration: none;
+            color: inherit;
         }
 
         .nav-links {
