--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
         .logo {
             font-family: HeadlineFont;
-            font-size: 1.5rem;
+            font-size: 5vw;
             font-weight: 700;
             letter-spacing: 2px;
             text-decoration: none;
