--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
         .logo {
             font-family: HeadlineFont;
-            font-size: 2vw;
+            font-size: clamp(2vw, 1.5em, 1.5em);
             font-weight: 700;
             letter-spacing: 2px;
             text-decoration: none;
