--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
             color: inherit;
         }
 
+        @media (max-width: 480px) {
+            .logo {
+                font-size: clamp(1rem);
+            }
+        }
+        
         .nav-links {
             display: flex;
             list-style: none;
