--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
         .logo {
             font-family: HeadlineFont;
-            font-size: 1vw;
+            font-size: clamp(1.2rem, 2vw, 3rem);
             font-weight: 700;
             letter-spacing: 2px;
             text-decoration: none;
@@ -78,7 +78,7 @@
 
         @media (max-width: 480px) {
             .logo {
-                font-size: clamp(1.2rem);
+                font-size: clamp(1rem, 4vw, 2rem);
             }
         }
         
