--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@
     <header>
         <nav>
             <a href="#" class="logo">
-                <img src="images/MainLogo.png" alt="Main Logo">
+                <img src="images/SimplifiedLogo.png" alt="Main Logo">
             </a>
 
             <ul class="nav-links">
