--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
 
 
         /* Logo */
+        .logo {
+            max-height: 100%;
+            height: auto;
+            width: auto;
+        }
+        
         .mobile {
             display: none;
         }
@@ -739,9 +745,9 @@
 </head>
 <body>
     <header>
-        <nav class="container">
-            <img src="images/logos/SimplifiedLogo.png" class="mobile" />
-            <img src="images/logos/MainLogo.png" class="desktop" />
+        <nav class="header">
+            <img src="images/logos/SimplifiedLogo.png" class="logo mobile" />
+            <img src="images/logos/MainLogo.png" class="logo desktop" />
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#products">Products</a></li>
