--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
             top: 0;
             z-index: 1000;
             border-bottom: 1px solid #333;
+            height: 80px; /* Feste Höhe für den Header */
+            display: flex;
+            align-items: center; /* Logo wird schön vertikal zentriert */
+            padding: 0 20px;
+            box-sizing: border-box; /* Damit das Padding nicht die Höhe aufbläht */
         }
 
         nav {
