--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         nav {
             height: 100%;
             display: flex;
-            justify-content: space between;
+            justify-content: space-between;
             align-items: center;
             padding: 0 20px;
             box-sizing: border-box;
