--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
             box-sizing: border-box;
         }
 
+        .navigation {
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
         .nav-links {
             display: flex;
             list-style: none;
