--- a/index.html
+++ b/index.html
@@ -89,8 +89,11 @@
         }
 
         .navigation {
-            max-width: 1200px;
-            margin: 0 auto;
+            width: 100%;
+            max-width: none;
+            margin: 0;
+            padding 0 20px;
+            box-sizing: border-box;
         }
 
         .nav-links {
