--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
         }
 
         .btn-cart {
+            position: relative;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -122,51 +123,50 @@
             border-radius: 10px;
             border: none;
             background-color: transparent;
-            position: relative;
         }
 
         .btn-cart::after {
             content: attr(data-quantity);
-            width: fit-content;
-            height: fit-content;
             position: absolute;
-            font-size: 15px;
+            font-size: 12px;
             color: white;
-            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            font-family: 'Lucida Sans', sans-serif;
             opacity: 0;
             visibility: hidden;
             transition: .2s linear;
             top: 115%;
-        }
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: rgba(0, 0, 0, 0.7);
+            padding: 2px 5px;
+            border-radius: 5px;
+       }
 
-        .icon-cart {
-            width: 24.38px;
-            height: 30.52px;
+       .icon-cart {
+            width: 24px;
+            height: 30px;
             transition: .2s linear;
-        }
+       }
 
-        .icon-cart path {
+       .icon-cart path {
             fill: rgb(240, 8, 8);
             transition: .2s linear;
-        }
+       }
 
-        .btn-cart:hover > .icon-cart {
+       .btn-cart:hover > .icon-cart {
             transform: scale(1.2);
-        }
+       }
 
-        .btn-cart:hover > .icon-cart path {
+       .btn-cart:hover > .icon-cart path {
             fill: rgb(186, 34, 233);
-        }
+       }
 
-        .btn-cart:hover::after {
+       .btn-cart:hover::after {
             visibility: visible;
             opacity: 1;
             top: 105%;
-        }
+       }
 
-        .quantity {
-            display: none;
-        }
 
 
         /* Hero Section */
