--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
        }
 
        .icon-cart path {
-            fill: rgb(240, 8, 8);
+            fill: #005F4E;
             transition: .2s linear;
        }
 
