--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
        }
 
        .btn-cart:hover > .icon-cart path {
-            fill: rgb(186, 34, 233);
+            fill: white;
        }
 
        .btn-cart:hover::after {
