--- a/index.html
+++ b/index.html
@@ -962,7 +962,7 @@
                         <span class="quantity-label">Menge:</span>
                         <div class="quantity-controls">
                             <button class="quantity-btn" onclick="changeQuantity(-1)">-</button>
-                            <input type="number" class="quantity-input" id="quantity" value="1" min="1" max="10">
+                            <input type="number" class="quantity-input" id="cart-count" value="1" min="1" max="10">
                             <button class="quantity-btn" onclick="changeQuantity(1)">+</button>
                         </div>
                     </div>
