--- a/index.html
+++ b/index.html
@@ -1163,6 +1163,7 @@
             
             cartCount += quantity;
             document.getElementById('cart-count').textContent = cartCount;
+            document,getElementById('btn-cart').setAttribute('data-quantity', cartCount);
             
             // Success feedback
             const button = document.querySelector('.add-to-cart-modal');
