--- a/index.html
+++ b/index.html
@@ -1164,7 +1164,7 @@
             
             cartCount += quantity;
             document.getElementById('cart-count').textContent = cartCount;
-            document.querySelector('btn-cart').setAttribute('data-quantity', cartCount);
+            document.querySelector('.btn-cart').setAttribute('data-quantity', cartCount);
             
             // Success feedback
             const button = document.querySelector('.add-to-cart-modal');
