--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BTC</title>
+    
+    <link rel="icon" type="image/x-icon" href="images/favicons/Favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/Fav32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicons/Fav16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicons/FavAppleTouch.png">
+    <link rel="android-chrome-icon" sizes="192x192" href="images/favicons/Fav192.png">
+    <link rel="android-chrome-icon" sizes="512x512" href="images/favicons/Fav512.png">
+    
     <style>
 
         @font-face {
