--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
             line-height: 1.6;
         }
 
+        h1 {
+            font-family: HeadlineFont;
+
         .container {
             max-width: 1200px;
             margin: 0 auto;
@@ -821,7 +824,7 @@
     <main>
         <section class="hero" id="home">
             <div class="container">
-                <h1>MINIMAL STORE</h1>
+                <h1>BeyondTheCover</h1>
                 <p>Entdecke unsere kuratierte Auswahl an Premium-Produkten</p>
             </div>
         </section>
