--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         }
 
         h1 {
-            font-family: HeadlineFont;
+            font-family: 'HeadlineFont';
 
         .container {
             max-width: 1200px;
