--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 
         h1 {
             font-family: 'HeadlineFont';
+            width: 100%;
+            
         }
 
         .container {
