--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         h1 {
             font-family: 'HeadlineFont';
-            width: 90%;
+            font-size: 100%;
             
         }
 
