--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
             line-height: 1.6;
         }
 
-        h1 {
-            font-family: 'HeadlineFont';
-            font-size: 90%;
-            
-        }
-
         .container {
             max-width: 1200px;
             margin: 0 auto;
-            padding: 0 20px;
+            padding: 20 20px;
+        }
+
+        h1 {
+            font-family: 'HeadlineFont';
+            font-size: 5vw;
+            
         }
 
         /* Header */
