--- a/index.html
+++ b/index.html
@@ -44,12 +44,11 @@
             max-width: 1200px;
             margin: 0 auto;
             padding: 20 20px;
+            font-size: 2rem;
         }
 
         h1 {
             font-family: 'HeadlineFont';
-            font-size: 5vw;
-            
         }
 
         /* Header */
