--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             max-width: 1200px;
             margin: 0 auto;
             padding: 20 20px;
-            font-size: 2rem;
+            font-size: 40px;
         }
 
         h1 {
