--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             font-size: 40px;
         }
 
-        h1 {
+        .conatiner h1 {
             font-family: 'HeadlineFont';
         }
 
