--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 
         .container h1 {
             font-family: 'HeadlineFont';
+            font-size: 50%;
         }
 
         /* Header */
