--- a/index.html
+++ b/index.html
@@ -21,9 +21,15 @@
         }
 
         @font-face {
-           font-family: 'MainFont';
+           font-family: 'GoofyFont';
            src: url('fonts/Mavoble.ttf') format('truetype');
            font-weight: 400;
+        }
+
+        @font-face {
+            font-family: 'MainFont';
+            src: url('fonts/Iceland-Regular.ttf') format('trutype');
+            font-weight: 400;
         }
 
         * {
@@ -49,7 +55,7 @@
 
         .container h2 {
             font-family: 'HeadlineFont';
-            font-size: 50%;
+            font-size: 70%;
         }
 
         /* Header */
