--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
             font-size: 70%;
         }
 
+        .container p {
+            font-family: 'MainFont';
+        }
+
         /* Header */
         header {
             background: rgba(0, 0, 0, 0.8);
