--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         @font-face {
             font-family: 'MainFont';
-            src: url('fonts/Iceland-Regular.ttf') format('trutype');
+            src: url('fonts/Iceland-Regular.ttf') format('truetype');
             font-weight: 400;
         }
 
@@ -49,7 +49,7 @@
         .container {
             max-width: 1200px;
             margin: 0 auto;
-            padding: 20 20px;
+            padding: 20px 20px;
             font-size: 40px;
         }
 
