--- a/index.html
+++ b/index.html
@@ -838,7 +838,7 @@
         <section class="hero" id="home">
             <div class="container">
                 <h2>BeyondTheCover</h2>
-                <p>Entdecke unsere kuratierte Auswahl an Premium-Produkten</p>
+                <p>Eyes on power, profits by the hour!</p>
             </div>
         </section>
 
