--- a/index.html
+++ b/index.html
@@ -255,13 +255,14 @@
 
         .info-text p {
             font-size: 1.1rem;
-            color: #ccc;
+            font-family: 'MainFont';
+            color: white;
             margin-bottom: 1.5rem;
             line-height: 1.8;
         }
 
         .info-text .highlight {
-            color: #fff;
+            color: ##005F4E;
             font-weight: 600;
         }
 
