--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         }
 
         .info-text .highlight {
-            color: ##005F4E;
+            color: #005F4E;
             font-weight: 600;
         }
 
