--- a/index.html
+++ b/index.html
@@ -857,20 +857,20 @@
 
                 <div class="stats-grid">
                     <div class="stat-card">
-                        <div class="stat-number">50k+</div>
-                        <div class="stat-label">Zufriedene Kunden</div>
+                        <div class="stat-number">126+</div>
+                        <div class="stat-label">Persons of interest</div>
                     </div>
                     <div class="stat-card">
-                        <div class="stat-number">99%</div>
-                        <div class="stat-label">Kundenzufriedenheit</div>
+                        <div class="stat-number">5 years</div>
+                        <div class="stat-label">of experience</div>
                     </div>
                     <div class="stat-card">
                         <div class="stat-number">24/7</div>
-                        <div class="stat-label">Premium Support</div>
+                        <div class="stat-label">Whale Tracking</div>
                     </div>
                     <div class="stat-card">
                         <div class="stat-number">48h</div>
-                        <div class="stat-label">Schneller Versand</div>
+                        <div class="stat-label">Delivery</div>
                     </div>
                 </div>
             </div>
@@ -906,16 +906,16 @@
 
         <section class="products" id="products">
             <div class="container">
-                <h2>Unsere Produkte</h2>
+                <h2>Our products</h2>
                 <div class="product-grid">
                     <div class="product-card">
                         <div class="product-image">📱</div>
                         <div class="product-info">
-                            <h3 class="product-name">Premium Smartphone</h3>
-                            <p class="product-description">Neueste Technologie in elegantem Design. Perfekt für den modernen Lifestyle.</p>
-                            <div class="product-price">€899</div>
+                            <h3 class="product-name">Diver</h3>
+                            <p class="product-description">Dip your toe through the surface.</p>
+                            <div class="product-price">€2</div>
                             <button class="view-product" onclick="openProductModal('premium-smartphone')">
-                                Details anzeigen
+                                Show details
                             </button>
                         </div>
                     </div>
@@ -923,11 +923,11 @@
                     <div class="product-card">
                         <div class="product-image">🎧</div>
                         <div class="product-info">
-                            <h3 class="product-name">Wireless Headphones</h3>
-                            <p class="product-description">Kristallklarer Sound mit aktiver Geräuschunterdrückung. Für das ultimative Hörerlebnis.</p>
-                            <div class="product-price">€299</div>
+                            <h3 class="product-name">Submarine</h3>
+                            <p class="product-description">Dive right in and follow the whales.</p>
+                            <div class="product-price">€10</div>
                             <button class="view-product" onclick="openProductModal('wireless-headphones')">
-                                Details anzeigen
+                                Show details
                             </button>
                         </div>
                     </div>
@@ -935,11 +935,11 @@
                     <div class="product-card">
                         <div class="product-image">⌚</div>
                         <div class="product-info">
-                            <h3 class="product-name">Smart Watch</h3>
-                            <p class="product-description">Fitness-Tracking und Smart-Features in einem stilvollen, minimalistischen Design.</p>
-                            <div class="product-price">€399</div>
+                            <h3 class="product-name">Moses</h3>
+                            <p class="product-description">Coming soon!</p>
+                            <div class="product-price">€ ~</div>
                             <button class="view-product" onclick="openProductModal('smart-watch')">
-                                Details anzeigen
+                                Show details
                             </button>
                         </div>
                     </div>
@@ -950,7 +950,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 MINIMAL STORE. Alle Rechte vorbehalten.</p>
+            <p>&copy; 2025 BEYONDTHECOVER. All rights preserved.</p>
         </div>
     </footer>
 
