--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
         }
 
         .container {
-            max-width: 1200px;
+            width: 100vw;
+            max-width: 100vw;
+            overflow-x: hidden;
             margin: 0 auto;
             padding: 20px 20px;
             font-size: 40px;
