--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         .container h2 {
             font-family: 'HeadlineFont';
-            font-size: 50vw;
+            font-size: 20%;
         }
 
         .container p {
