--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             color: #ffffff;
             min-height: 100vh;
             line-height: 1.6;
+            max-width: 100vw;
         }
 
         .container {
