--- a/index.html
+++ b/index.html
@@ -45,15 +45,22 @@
             min-height: 100vh;
             line-height: 1.6;
             max-width: 100vw;
+            overflow-x: hidden;
         }
 
         .container {
-            width: 75vw;
+            width: 100vw;
             max-width: 100vw;
             overflow-x: hidden;
+            box-sizing: border-box;
             margin: 0 auto;
             padding: 20px 20px;
             font-size: 40px;
+        }
+
+        .container * {
+            box-sizing: border-box;
+            word-break: break-word;
         }
 
         .container h2 {
