--- a/index.html
+++ b/index.html
@@ -50,12 +50,19 @@
 
         .container {
             width: 70vw;
-            max-width: 100vw;
+            max-width: 70vw;
             overflow-x: hidden;
             box-sizing: border-box;
             margin: 0 auto;
             padding: 20px 20px;
             font-size: 40px;
+        }
+
+        @media (max-width: 768px) {
+            .container {
+                width: 100vw;
+                max-width: 100vw;
+            }
         }
 
         .container * {
