--- a/index.html
+++ b/index.html
@@ -361,6 +361,12 @@
             color: #fff;
         }
 
+        @media (max-width: 768pc) {
+            .products h2 {
+                font-size: 5vw;
+            }
+        }
+
         .product-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
