--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
             color: #fff;
         }
 
-        @media (max-width: 768pc) {
+        @media (max-width: 768px) {
             .products h2 {
                 font-size: 5vw;
             }
