--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
             background: radial-gradient(circle at center, #1a1a1a 0%, #0a0a0a 100%);
         }
 
-        .hero h1 {
-            font-size: 3rem;
+        .hero h2 {
+            font-size: 2vw;
             font-weight: 300;
             margin-bottom: 1rem;
             letter-spacing: 3px;
