--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         }
 
         .hero p {
-            font-size: 1.2rem;
+            font-size: 1vw;
             color: #888;
             margin-bottom: 2rem;
         }
