--- a/index.html
+++ b/index.html
@@ -236,6 +236,14 @@
             margin-bottom: 2rem;
         }
 
+        @media (max-width: 768px) {
+            .hero p {
+                font-size: 2vw;
+                color: white;
+                margin-bottom: 2rem;
+            }
+        }
+
         /* Info Sections */
         .info-section {
             padding: 6rem 0;
