--- a/index.html
+++ b/index.html
@@ -232,14 +232,14 @@
 
         .hero p {
             font-size: 1vw;
-            color: #888;
+            color: #005F4E;
             margin-bottom: 2rem;
         }
 
         @media (max-width: 768px) {
             .hero p {
-                font-size: 2vw;
-                color: white;
+                font-size: 3vw;
+                color: #005F4E;
                 margin-bottom: 2rem;
             }
         }
