--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         }
 
         @font-face {
-           font-family: 'MainFont';
+           font-family: 'MainFont1';
            src: url('fonts/Mavoble.ttf') format('truetype');
            font-weight: 400;
         }
@@ -29,6 +29,12 @@
         @font-face {
             font-family: 'GoofyFont';
             src: url('fonts/Iceland-Regular.ttf') format('truetype');
+            font-weight: 400;
+        }
+
+        @font-face {
+            font-family: 'MainFont';
+            src: url('fonts/Relevance-trial-Regular.ttff') format('truetype');
             font-weight: 400;
         }
 
