--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         @font-face {
             font-family: 'MainFont';
-            src: url('fonts/Relevance-trial-Regular.ttff') format('truetype');
+            src: url('fonts/Relevance-trial-Regular.ttf') format('truetype');
             font-weight: 400;
         }
 
