--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
         .stat-number {
             font-size: 3rem;
             font-weight: 700;
-            color: #fff;
+            color: #005F4E;
             margin-bottom: 0.5rem;
         }
 
@@ -387,6 +387,9 @@
             gap: 3rem;
             margin-top: 3rem;
         }
+
+        .product-grid h3 {
+            font-family: 'HeadlineFont';
 
         .product-card {
             background: rgba(255, 255, 255, 0.05);
