--- a/index.html
+++ b/index.html
@@ -390,6 +390,7 @@
 
         .product-grid h3 {
             font-family: 'HeadlineFont';
+            font-size: 40%;
         }
 
         .product-card {
