--- a/index.html
+++ b/index.html
@@ -562,6 +562,15 @@
             gap: 1rem;
         }
 
+        @media (max-width: 768px) {
+            .modal-images {
+                max-width: 90%;
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+            }
+        }
+
         .main-image {
             height: 400px;
             background: linear-gradient(45deg, #2c2c2c, #1a1a1a);
