--- a/index.html
+++ b/index.html
@@ -550,6 +550,7 @@
         }
 
         .modal-body {
+            max-width: 100%;
             display: grid;
             grid-template-columns: 1fr 1fr;
             gap: 3rem;
