--- a/index.html
+++ b/index.html
@@ -491,11 +491,13 @@
             height: 100%;
             background: rgba(0, 0, 0, 0.9);
             backdrop-filter: blur(10px);
+            box-sizing: border-box;
             display: none;
             justify-content: center;
             align-items: center;
             z-index: 2000;
             opacity: 0;
+            overflow-x: hidden;
             transition: opacity 0.3s ease;
         }
 
@@ -507,7 +509,7 @@
         .modal-content {
             background: linear-gradient(135deg, #1a1a1a, #2c2c2c);
             border-radius: 20px;
-            max-width: 900px;
+            max-width: 100%;
             width: 90%;
             max-height: 90vh;
             overflow-y: auto;
@@ -551,24 +553,49 @@
 
         .modal-body {
             max-width: 100%;
-            display: grid;
+            display: flex;
+            flex-direction: column;
             grid-template-columns: 1fr 1fr;
             gap: 3rem;
             padding: 2rem;
+            box-sizing: border-box;
         }
 
-        .modal-images {
+        .modal-body * {
+            max-width: 100%;
+            box-sizing: border-box;
+            word-break: break-word;
+        }
+
+        .specs-grid {
+            display: grid;
+            grid-template-colums: 1fr 1fr;
+            gap: 0.5rem;
+            width: 100%;
+            box-sizing: border-box;
+        }
+
+        .modal-images img,
+        .quantity-input {
             display: flex;
             flex-direction: column;
             gap: 1rem;
+            max-width: 100%;
+            height: auto;
+            box-sizing: border-box;
         }
 
         @media (max-width: 768px) {
-            .modal-images {
-                max-width: 90%;
+            .modal-content {
+                width: 100%
+                max-width: 100%;
                 display: flex;
                 flex-direction: column;
                 gap: 1rem;
+            }
+
+            .specs-grid {
+                grid-template-columns: 1fr;
             }
         }
 
