--- a/index.html
+++ b/index.html
@@ -561,10 +561,12 @@
             box-sizing: border-box;
         }
 
-        .modal-body * {
-            max-width: 100%;
-            box-sizing: border-box;
-            word-break: break-word;
+        @media (max-width: 768px) {
+            .modal-body * {
+                max-width: 100%;
+                box-sizing: border-box;
+                word-break: break-word;
+            }
         }
 
         .specs-grid {
