--- a/index.html
+++ b/index.html
@@ -379,6 +379,10 @@
             .products h2 {
                 font-size: 5vw;
             }
+
+            .products .container {
+                margin: 0 auto;
+            }
         }
 
         .product-grid {
