--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
             max-width: 100%;
             width: 90%;
             max-height: 90vh;
-            overflow-y: auto;
+            overflow-y: hidden;
             position: relative;
             border: 1px solid rgba(255, 255, 255, 0.1);
             box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5);
