--- a/index.html
+++ b/index.html
@@ -365,6 +365,7 @@
         /* Products Section */
         .products {
             padding: 4rem 0;
+            position: relative;
         }
 
         .products h2 {
@@ -381,7 +382,10 @@
             }
 
             .products .container {
-                margin: 0 auto;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
             }
         }
 
