--- a/index.html
+++ b/index.html
@@ -365,7 +365,6 @@
         /* Products Section */
         .products {
             padding: 4rem 0;
-            position: relative;
         }
 
         .products h2 {
@@ -520,7 +519,7 @@
             max-width: 100%;
             width: 90%;
             max-height: 90vh;
-            overflow-y: hidden;
+            overflow-y: auto;
             position: relative;
             border: 1px solid rgba(255, 255, 255, 0.1);
             box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5);
