--- a/index.html
+++ b/index.html
@@ -381,10 +381,7 @@
             }
 
             .products .container {
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
+                margin right 10px
             }
         }
 
