--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
             }
 
             .products .container {
-                margin right 10px
+                margin-right: 10px;
             }
         }
 
