--- a/index.html
+++ b/index.html
@@ -380,8 +380,10 @@
                 font-size: 5vw;
             }
 
-            .products .container {
-                margin-right: 10px;
+            .products {
+                display: flex;
+                justify-content: center;
+                align-items: center;
             }
         }
 
