--- a/index.html
+++ b/index.html
@@ -973,6 +973,8 @@
                     </div>
                     <div class="info-image">🌱</div>
                 </div>
+            </div>
+        </section>
 
         <section class="info-section">
             <div class="container">
@@ -985,6 +987,8 @@
                     </div>
                     <div class="info-image">✨</div>
                 </div>
+            </div>
+        </section>
 
         <section class="products" id="products">
             <div class="container">
