--- a/index.html
+++ b/index.html
@@ -507,6 +507,26 @@
             transition: opacity 0.3s ease;
         }
 
+        @media (max-width 768px) {
+            .product-modal {
+                position: fixed;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background: rgba(0, 0, 0, 0.9);
+                backdrop-filter: blur(10px);
+                box-sizing: border-box;
+                display: none;
+                justify-content: center;
+                align-items: center;
+                z-index: 2000;
+                opacity: 0;
+                overflow-x: hidden;
+                transition: opacity 0.3s ease;
+            }  
+        }
+
         .product-modal.active {
             display: flex;
             opacity: 1;
