--- a/index.html
+++ b/index.html
@@ -666,6 +666,10 @@
             padding: 1rem 0;
         }
 
+        .mein-container::-webkit-scrollbar {
+            display: none;
+        }
+
         .modal-title {
             font-size: 2.5rem;
             font-weight: 300;
