--- a/index.html
+++ b/index.html
@@ -523,6 +523,7 @@
             border: 1px solid rgba(255, 255, 255, 0.1);
             box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5);
             animation: modalSlideIn 0.3s ease;
+            scrollbar-width: none;
         }
 
         @media (max-width: 768px) {
@@ -537,7 +538,12 @@
                 border: 1px solid rgba(255, 255, 255, 0.1);
                 box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5);
                 animation: modalSlideIn 0.3s ease;
+                scrollbar-width: none;
             }
+        }
+
+        .modal-content::-webkit-scrollbar{
+            display: none;
         }
 
         @keyframes modalSlideIn {
