--- a/index.html
+++ b/index.html
@@ -685,6 +685,7 @@
 
         .modal-info {
             padding: 1rem 0;
+            font-family: 'HeadlineFont';
         }
 
         .modal-title {
