--- a/index.html
+++ b/index.html
@@ -685,7 +685,11 @@
 
         .modal-info {
             padding: 1rem 0;
+        }
+
+        .modal-info h2 {
             font-family: 'HeadlineFont';
+            font-size: auto;
         }
 
         .modal-title {
