--- a/index.html
+++ b/index.html
@@ -691,6 +691,12 @@
             font-family: 'HeadlineFont';
         }
 
+        @media (max-width: 768px) {
+            .modal-info h2 {
+                font-size: 30vr;
+            }
+        }
+
         .modal-title {
             font-size: 2.5rem;
             font-weight: 300;
