--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
 
         @media (max-width: 768px) {
             .modal-info h2 {
-                font-size: 30vr;
+                font-size: 3vw;
             }
         }
 
