--- a/index.html
+++ b/index.html
@@ -850,6 +850,14 @@
             color: #666;
         }
 
+        @media (max-width: 768px) {
+            .btn-cart .quantity {
+                color: #4CAF50 !important;
+                -webkit-text-fill-color: #4CAF50 !important;
+                text-decoration: none !important;
+            }
+        }
+
         /* Responsive */
         @media (max-width: 768px) {
             .nav-links {
