--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@
 
         @media (max-width: 768px) {
             .btn-cart .quantity {
-                color: #4CAF50 !important;
+                color: #005F4E !important;
                 -webkit-text-fill-color: #4CAF50 !important;
                 text-decoration: none !important;
             }
