--- a/index.html
+++ b/index.html
@@ -734,7 +734,7 @@
             content: '✓';
             position: absolute;
             left: 0;
-            color: #4CAF50;
+            color: #005F4E;
             font-weight: bold;
         }
 
@@ -853,7 +853,7 @@
         @media (max-width: 768px) {
             .btn-cart .quantity {
                 color: #005F4E !important;
-                -webkit-text-fill-color: #4CAF50 !important;
+                -webkit-text-fill-color: #005F4E !important;
                 text-decoration: none !important;
             }
         }
