--- a/index.html
+++ b/index.html
@@ -1320,7 +1320,7 @@
             const button = document.querySelector('.add-to-cart-modal');
             const originalText = button.textContent;
             button.textContent = `${quantity}x Hinzugefügt!`;
-            button.style.background = 'linear-gradient(45deg, #27ae60, #2ecc71)';
+            button.style.background = 'linear-gradient(#005F4E)';
             
             setTimeout(() => {
                 button.textContent = originalText;
