--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             margin: 0 auto;
             padding: 20px 20px;
             font-size: 40px;
+            font-family: MainFont;
         }
 
         @media (max-width: 768px) {
