--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
             color: #aaa;
             margin-bottom: 1rem;
             font-size: 0.9rem;
-            font-family: MainFont;
+            font-family: 'MainFont';
         }
 
         .product-price {
