--- a/index.html
+++ b/index.html
@@ -466,6 +466,7 @@
             font-weight: 700;
             color: #fff;
             margin-bottom: 1rem;
+            font-family: 'MainFont';
         }
 
         .view-product {
