--- a/index.html
+++ b/index.html
@@ -1036,7 +1036,7 @@
                         <div class="product-info">
                             <h3 class="product-name">Diver</h3>
                             <p class="product-description">Dip your toe through the surface.</p>
-                            <div class="product-price">€2</div>
+                            <div class="product-price">€2/mo</div>
                             <button class="view-product" onclick="openProductModal('premium-smartphone')">
                                 Show details
                             </button>
@@ -1048,7 +1048,7 @@
                         <div class="product-info">
                             <h3 class="product-name">Submarine</h3>
                             <p class="product-description">Dive right in and follow the whales.</p>
-                            <div class="product-price">€10</div>
+                            <div class="product-price">€10/mo</div>
                             <button class="view-product" onclick="openProductModal('wireless-headphones')">
                                 Show details
                             </button>
@@ -1094,7 +1094,7 @@
                 
                 <div class="modal-info">
                     <h2 class="modal-title" id="modal-title">Premium Smartphone</h2>
-                    <div class="modal-price" id="modal-price">€899</div>
+                    <div class="modal-price" id="modal-price">€ ~</div>
                     <p class="modal-description" id="modal-description">
                         Neueste Technologie in elegantem Design. Perfekt für den modernen Lifestyle.
                     </p>
