--- a/index.html
+++ b/index.html
@@ -1154,7 +1154,7 @@
         const products = {
             'premium-smartphone': {
                 name: 'Premium Smartphone',
-                price: €2/mo,
+                price: 2,
                 icon: '📱',
                 description: 'Neueste Technologie in elegantem Design. Perfekt für den modernen Lifestyle. Dieses Premium-Smartphone vereint innovative Features mit zeitlosem Design und bietet eine unvergleichliche Benutzererfahrung.',
                 features: [
@@ -1176,7 +1176,7 @@
             },
             'wireless-headphones': {
                 name: 'Wireless Headphones',
-                price: €10/mo,
+                price: 10,
                 icon: '🎧',
                 description: 'Kristallklarer Sound mit aktiver Geräuschunterdrückung. Für das ultimative Hörerlebnis. Diese Premium-Kopfhörer bieten studioqualitativen Sound und modernste Noise-Cancelling-Technologie.',
                 features: [
@@ -1198,7 +1198,7 @@
             },
             'smart-watch': {
                 name: 'Smart Watch',
-                price: € ~/mo,
+                price: 0,
                 icon: '⌚',
                 description: 'Fitness-Tracking und Smart-Features in einem stilvollen, minimalistischen Design. Diese Smartwatch ist der perfekte Begleiter für Sport, Gesundheit und den digitalen Alltag.',
                 features: [
