--- a/index.html
+++ b/index.html
@@ -308,6 +308,17 @@
             border: 1px solid rgba(255, 255, 255, 0.1);
         }
 
+        .info-igae img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center;
+            z-index: 0;
+        }
+
         .info-image::before {
             content: '';
             position: absolute;
