--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             border: 1px solid rgba(255, 255, 255, 0.1);
         }
 
-        .info-igae img {
+        .info-image img {
             position: absolute;
             top: 0;
             left: 0;
