--- a/index.html
+++ b/index.html
@@ -313,6 +313,7 @@
             top: 0;
             left: 0;
             width: 100%;
+            height: 100%;
             object-fit: cover;
             object-position: center;
             z-index: 0;
