--- a/index.html
+++ b/index.html
@@ -997,11 +997,11 @@
 
                 <div class="stats-grid">
                     <div class="stat-card">
-                        <div class="stat-number">126+</div>
+                        <div class="stat-number">126</div>
                         <div class="stat-label">Persons of interest</div>
                     </div>
                     <div class="stat-card">
-                        <div class="stat-number">5 years</div>
+                        <div class="stat-number">5 yrs</div>
                         <div class="stat-label">of experience</div>
                     </div>
                     <div class="stat-card">
