--- a/index.html
+++ b/index.html
@@ -340,6 +340,8 @@
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
             gap: 3rem;
             margin-top: 4rem;
+            padding-left: 20px;
+            padding-right: 20px;
         }
 
         .stat-card {
