--- a/index.html
+++ b/index.html
@@ -344,6 +344,13 @@
             padding-right: 100px;
         }
 
+        @media (max-width: 768px) {
+            .stats-grid {
+                padding-left: 0px;
+                padding-right: 0px;
+            }
+        }
+
         .stat-card {
             text-align: center;
             padding: 2rem;
