--- a/index.html
+++ b/index.html
@@ -211,7 +211,29 @@
             top: 105%;
        }
 
-       
+       .fullscreen-overlay {
+           position: fixed;
+           top: 0;
+           left: 0;
+           width: 100%;
+           height: 100%;
+           background: white;
+           z-index: 2000;
+           opacity: 0;
+           visibility: hidden;
+           transition: opacity 0.3s ease, visibility 0.3 ease;
+       }
+
+        #contactOverlay:target {
+            opacity: 1;
+            visibility: visible;
+        }
+
+        #overlay-content {
+            padding 100px 2rem 2rem;
+            height: 100vh;
+            overflow-y: uto;
+        }
 
 
         /* Hero Section */
@@ -977,6 +999,19 @@
             </div>
         </nav>
     </header>
+
+    <nav class="navigation">
+        <ul class="nav-links">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#contact">Contact</a></li> <!-- Das reicht! -->
+        </ul>
+    </nav>
+
+    <div id="contactOverlay" class="fullscreen-overlay">
+        <div class="overlay-content">
+            <h2>Contact</h2>
+        </div>
+    </div>
 
     <main>
         <section class="hero" id="home">
