--- a/index.html
+++ b/index.html
@@ -1418,7 +1418,7 @@
         }
 
         // Smooth scrolling for navigation links
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+        document.querySelectorAll('a[href="#home"], a[href="#products"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
                 e.preventDefault();
                 const target = document.querySelector(this.getAttribute('href'));
@@ -1428,8 +1428,11 @@
                         block: 'start'
                     });
                 }
+                // Manuell Hash setzen
+                window.location.hash = this.getAttribute('href');
             });
         });
+        
     </script>
 </body>
 </html>
