--- a/index.html
+++ b/index.html
@@ -1421,17 +1421,22 @@
         document.querySelectorAll('a[href="#home"], a[href="#products"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
                 e.preventDefault();
-                const target = document.querySelector(this.getAttribute('href'));
+                const href = this.getAttribute('href');
+                const target = document.querySelector(href);
                 if (target) {
                     target.scrollIntoView({
                         behavior: 'smooth',
                         block: 'start'
-                    });
+                     });
+                     // Hash etwas später setzen, damit der Browser nicht teleportiert
+                     setTimeout(() => {
+                         history.pushState(null, null, href);
+                         handleHashChange(); // Falls der Hash nicht von selbst ausgelöst wird
+                     }, 400);
                 }
-                // Manuell Hash setzen
-                window.location.hash = this.getAttribute('href');
             });
         });
+
         
     </script>
 </body>
